# cpp-project-template

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: CppLint.cmake  Doctest.cmake  Documentation.cmake  FormatAndTidy.cmake  clean-all.cmake
example/: example.cpp
src/: CMakeLists.txt
